--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,9 @@
   "name": "environment-marker",
   "private": true,
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "jscolor": "^1.4.2"
+  },
   "devDependencies": {
     "chai": "^3.5.0",
     "mocha": "^3.2.0"
