--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "gulp-chrome-manifest": "0.0.13",
     "gulp-clean-css": "^2.0.3",
     "gulp-eslint": "^2.0.0",
+    "gulp-htmlmin": "^1.3.0",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "^1.2.0",
-    "gulp-htmlmin": "^1.3.0",
+    "gulp-main-bower-files": "^1.6.1",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
