--- a/package.json
+++ b/package.json
@@ -1,47 +1,21 @@
 {
-  "name": "environment-marker",
-  "private": true,
-  "engines": {
-    "node": ">=0.8.0"
-  },
+  "name": "chrome-extension-scaffold",
+  "version": "1.0.0",
+  "description": "A chrome web extension scaffolding",
+  "main": "index.js",
+  "scripts": {},
   "devDependencies": {
-    "babel-core": "^6.7.2",
-    "babel-preset-es2015": "^6.6.0",
-    "del": "^2.2.0",
-    "gulp": "^3.9.1",
-    "gulp-cache": "^0.4.3",
-    "gulp-chrome-manifest": "0.0.13",
-    "gulp-clean-css": "^2.4.0",
-    "gulp-eslint": "^2.0.0",
-    "gulp-htmlmin": "^1.3.0",
-    "gulp-if": "^2.0.0",
-    "gulp-imagemin": "^2.4.0",
-    "gulp-livereload": "^3.8.1",
-    "gulp-load-plugins": "^1.2.0",
-    "gulp-main-bower-files": "^1.6.1",
-    "gulp-size": "^2.1.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.3",
-    "gulp-useref": "^3.0.8",
-    "gulp-zip": "^3.2.0",
-    "main-bower-files": "^2.11.1",
-    "run-sequence": "^1.1.5",
-    "wiredep": "^4.0.0"
+    "del": "^6.0.0",
+    "fancy-log": "^1.3.3",
+    "gulp": "^4.0.2",
+    "gulp-npm-dist": "^1.0.3",
+    "gulp-plumber": "1.1.0",
+    "gulp-sourcemaps": "2.6.0",
+    "gulp-uglify-es": "^0.1.6",
+    "gulp-uglifycss": "1.0.8",
+    "gulp-zip": "^5.0.2"
   },
-  "eslintConfig": {
-    "env": {
-      "node": true,
-      "browser": true
-    },
-    "globals": {
-      "chrome": true
-    },
-    "rules": {
-      "eol-last": 0,
-      "quotes": [
-        2,
-        "single"
-      ]
-    }
+  "dependencies": {
+    "jscolor-picker": "^2.0.4"
   }
 }
