--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
     "gulp-npm-dist": "^1.0.3",
-    "gulp-plumber": "1.1.0",
+    "gulp-plumber": "^1.2.1",
     "gulp-sourcemaps": "2.6.0",
     "gulp-uglify-es": "^0.1.6",
-    "gulp-uglifycss": "1.0.8",
-    "gulp-zip": "^5.0.2"
+    "gulp-uglifycss": "^1.1.0",
+    "gulp-zip": "^4.2.0"
   },
   "dependencies": {
     "jscolor-picker": "^2.0.4",
