--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,19 +1,25 @@
 {
   "manifest_version": 3,
   "name": "Environment Marker",
-  "version": "1.1",
+  "version": "1.2",
   "description": "This extension allows you to flag specified websites by adding a colored label depending on the URL configuration.",
   "icons": {
-    "16": "images/icon-16.png",
-    "48": "images/icon-48.png",
-    "128": "images/icon-128.png"
+    "16": "/images/icon-16.png",
+    "32": "/images/icon-32.png",
+    "64": "/images/icon-64.png",
+    "128": "/images/icon-128.png",
+    "256": "/images/icon-256.png",
+    "512": "/images/icon-512.png"
   },
   "default_locale": "en",
   "action": {
     "default_icon": {
-      "16": "images/icon-16.png",
-      "24": "images/icon-24.png",
-      "32": "images/icon-32.png"
+      "16": "/images/icon-16.png",
+      "32": "/images/icon-32.png",
+      "64": "/images/icon-64.png",
+      "128": "/images/icon-128.png",
+      "256": "/images/icon-256.png",
+      "512": "/images/icon-512.png"
     },
     "default_title": "Environment Marker",
     "default_popup": "html/popup.html"
