--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "This extension allows you to flag specified websites by adding a colored label depending on the URL configuration.",
   "scripts": {},
   "devDependencies": {
-    "del": "^6.0.0",
-    "fancy-log": "^1.3.3",
-    "gulp": "^4.0.2",
-    "gulp-npm-dist": "^1.0.3",
+    "del": "^8.0.0",
+    "fancy-log": "^2.0.0",
+    "gulp": "^5.0.0",
+    "gulp-npm-dist": "^1.0.4",
     "gulp-plumber": "^1.2.1",
-    "gulp-sourcemaps": "2.6.0",
-    "gulp-uglify-es": "^0.1.6",
+    "gulp-replace": "^1.1.4",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-terser": "^2.1.0",
     "gulp-uglifycss": "^1.1.0",
-    "gulp-zip": "^4.2.0"
+    "gulp-zip": "^6.1.0"
   },
   "dependencies": {
+    "firebase": "^11.3.1",
     "jscolor-picker": "^2.0.4",
     "textfit": "^2.4.0"
   }
