--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "gulp-replace": "^1.1.4",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-terser": "^2.1.0",
-    "gulp-uglifycss": "^1.1.0"
+    "gulp-uglifycss": "^1.1.0",
+    "merge-stream": "^2.0.0"
   },
   "dependencies": {
     "firebase": "^11.3.1",
