--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-copy": "^5.0.0",
     "gulp-npm-dist": "^1.0.4",
     "gulp-plumber": "^1.2.1",
+    "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.1.4",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-terser": "^2.1.0",
